@@ -19,12 +19,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.4.8</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.datastax.oss</groupId>
             <artifactId>java-driver-core</artifactId>
             <version>4.17.0</version>
@@ -35,28 +29,45 @@
             <artifactId>java-driver-query-builder</artifactId>
             <version>4.17.0</version>
         </dependency>
-
         <dependency>
-            <groupId>org.hibernate.validator</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>8.0.1.Final</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.1</version>
+            <scope>test</scope>
         </dependency>
-
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.15.2</version>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>cassandra</artifactId>
+            <version>1.19.4</version>
+            <scope>test</scope>
         </dependency>
-
         <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.15.2</version>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>1.19.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.4.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -143,41 +154,6 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>com.google.cloud.tools</groupId>
-                <artifactId>jib-maven-plugin</artifactId>
-                <version>3.4.0</version>
-                <configuration>
-                    <from>
-                        <image>openjdk:21-jdk-slim</image>
-                        <platforms>
-                            <platform>
-                                <architecture>amd64</architecture>
-                                <os>linux</os>
-                            </platform>
-                            <!--<platform>
-                                <architecture>arm64</architecture>
-                                <os>linux</os>
-                            </platform>-->
-                        </platforms>
-                    </from>
-                    <to>
-                        <image>${project.artifactId}</image>
-                    </to>
-                    <container>
-                        <jvmFlags>
-                            <jvmFlag>-Dfile.encoding=UTF-8</jvmFlag>
-                            <jvmFlag>-XX:+UseG1GC</jvmFlag>
-                            <jvmFlag>-verbose:gc</jvmFlag>
-                            <jvmFlag>--enable-preview</jvmFlag>
-                            <jvmFlag>-XX:+PrintGCDetails</jvmFlag>
-                            <jvmFlag>-Xloggc:/var/log/gc.log</jvmFlag>
-                            <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
-                        </jvmFlags>
-                        <mainClass>com.example.Main</mainClass>
-                    </container>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
@@ -208,6 +184,10 @@
                             </execution>
                         </executions>
                         <configuration>
+                            <buildArgs>
+                                <buildArg>-H:Log=registerResource:3 --enable-preview</buildArg>
+                            </buildArgs>
+<!--
                             <fallback>false</fallback>
                             <buildArgs>
                                 <arg>-H:DashboardDump=rinha-backend2024-q1-javaslow -H:+DashboardAll</arg>
@@ -218,6 +198,7 @@
                                     <option>experimental-class-loader-support</option>
                                 </options>
                             </agent>
+-->
                         </configuration>
                     </plugin>
                 </plugins>
